Fixed text wrapping for article headers

--- a/static/assets/style.css
+++ b/static/assets/style.css
@@ -44,7 +44,6 @@ th.subheading {
 }
 
 .art {
-    white-space: nowrap;
     font-weight: bold;
 }
 
